fixed gitlab build by adding plugin modules